<?xml version="1.0"?>
<package format="3">
  <name>ompl_benchmark</name>
  <version>0.0.0</version>
  <description>The ompl_benchmark package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rrt_search</depend>
  <depend>occupancy_grid</depend>
  <depend>radar_detection</depend>
  <depend>kalman_filter</depend>

  <depend>rclcpp</depend>

  <!--<depend>ompl</depend>-->
  <depend>OpenMP</depend>
  <depend>TBB</depend>

  <buildtool_depend>PkgConfig</buildtool_depend>
  <depend>flann</depend>
  <depend>LZ4</depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
