<?xml version="1.0"?>
<package format="3">
  <name>rrt_search</name>
  <version>0.0.0</version>
  <description>The rrt_search package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz</exec_depend>

  <depend>kalman_filter</depend>
  <depend>matplotlibcpp</depend>
  <depend>occupancy_grid</depend>
  <depend>radar_detection</depend>
  <depend>visibility_graph</depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rviz_visual_tools</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>uav_interfaces</depend>

  <depend>OpenMP</depend>
  <depend>TBB</depend>

  <buildtool_depend>PkgConfig</buildtool_depend>
  <depend>flann</depend>
  <depend>LZ4</depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
